--- a/src/dama/Tabuleiro.css
+++ b/src/dama/Tabuleiro.css
@@ -10,3 +10,36 @@
     height: 100px;
     display: flex;
 }
+
+.area-buttons {
+    margin-top: 25px;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+}
+span {
+    padding: 0px 22px;
+}
+span > h3 {
+    font-size: 24px;
+    font-weight: bold;
+}
+.azul {
+    color: blue;
+}
+.vermelho {
+    color: red;
+}
+.reniciar {
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    font-weight: 700;
+    border-radius: 8px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    width: auto;
+}
